--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./src/assets/images/bookicon2.png" type="image/x-icon">
-    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
-    <script src="bower_components/aos/dist/aos.js"></script>
+    <!-- <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+    <script src="bower_components/aos/dist/aos.js"></script> -->
     <title>BookNest</title>
   </head>
   <body>
     <div id="root"></div>
-    <script>
+    <!-- <script>
       AOS.init(
         {
       offset: 200,
@@ -20,8 +20,8 @@
       delay: 100,
     }
       );
-    </script>
+    </script> -->
     <script type="module" src="/src/main.jsx"></script>
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <!-- <script src="../path/to/flowbite/dist/flowbite.min.js"></script> -->
   </body>
 </html>
