--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./src/assets/images/bookicon2.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
-    <script src="bower_components/aos/dist/aos.js"></script> -->
+    <link
+      rel="shortcut icon"
+      href="./src/assets/images/bookicon2.png"
+      type="image/x-icon"
+    />
+
     <title>BookNest</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script>
-      AOS.init(
-        {
-      offset: 200,
-      duration: 600,
-      easing: 'ease-in-sine',
-      delay: 100,
-    }
-      );
-    </script> -->
+
     <script type="module" src="/src/main.jsx"></script>
-    <!-- <script src="../path/to/flowbite/dist/flowbite.min.js"></script> -->
   </body>
 </html>
