--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>BookNest</title>
   </head>
   <body>
-    <div class="bg-[#EEEEEE]" id="root"></div>
+    <div class="bg-[#EEEEEE] dark:bg-black dark:text-white" id="root"></div>
 
     <script type="module" src="/src/main.jsx"></script>
   </body>
